@@ -239,8 +239,10 @@ sub scan_configure
 	}
 
 	# Search for things we know about.  The "search" sub is
-	# constructed dynamically by scan_m4_files.
-	if (! &search && /(^|\s+)(AM_[A-Z_]+)/)
+	# constructed dynamically by scan_m4_files.  The last
+	# parenthethical match makes sure we don't match things that
+	# look like macro assignments or AC_SUBSTs.
+	if (! &search && /(^|\s+)(AM_[A-Z_]+)($|[^\]\)=A-Z_])/)
 	{
 	    # Macro not found, but AM_ prefix found.
 	    warn "aclocal: configure.in: $.: macro \`$2' not found in library\n";
@@ -366,8 +368,11 @@ sub add_file
 	s/\bdnl\b.*$//;
 	s/\#.*$//;
 
-	# The search function is constructed dynamically by scan_m4_files.
-	if (! &search && /(^|\s+)(AM_[A-Z_]+)/)
+	# The search function is constructed dynamically by
+	# scan_m4_files.  The last parenthethical match makes sure we
+	# don't match things that look like macro assignments or
+	# AC_SUBSTs.
+	if (! &search && /(^|\s+)(AM_[A-Z_]+)($|[^\]\)=A-Z_])/)
 	{
 	    # Macro not found, but AM_ prefix found.
 	    warn "aclocal: configure.in: $.: macro \`$2' not found in library\n";
