@@ -1,3 +1,10 @@
+2001-01-13  Steve Robbins  <smr@debian.org>
+	    Tom Tromey  <tromey@redhat.com>
+
+	* aclocal.in (scan_configure): Don't recognize macro assignments
+	or AC_SUBSTs.
+	(add_file): Likewise.
+
 2001-01-13  Kevin Ryde <user42@zip.com.au>
 
 	* automake.in (handle_ltlibraries): Omit -rpath from
